--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -2,6 +2,9 @@
   --cr-body-bg: #0f0f0f;
   --cr-main: #ff0000;
   --cr-txt-def: #fff;
+  --cr-trans-def: rgba(20, 20, 20, 0.7);
+  --cr-trans-darker: rgba(20, 20, 20, 0.9);
+
 
   --sh-box-def: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 
