--- a/frontend/src/components/Input/Input.module.scss
+++ b/frontend/src/components/Input/Input.module.scss
@@ -1,32 +1,81 @@
 fieldset {
   position: relative;
-  height: 2.5rem;
-  border: none;
+  height: 4.3rem;
   border-radius: 0.5rem;
   margin-bottom: 1rem;
-  background-color: #f4f4f4;
+  background-color: #333;
+
+  //a {
+  //  background-color: red;
+  //  position: absolute;
+  //  width: 5rem;
+  //  height: 2rem;
+  //}
+
+  //input:invalid {
+  //  border-bottom: 1rem red solid;
+  //  animation: bounce;
+  //  animation-duration: .5s;
+  //  animation-delay: 0.25s;
+  //}
+  //
+  //@keyframes bounce {
+  //  0% {
+  //    transform: translateX(0px);
+  //    timing-function: ease-in;
+  //  }
+  //  37% {
+  //    transform: translateX(5px);
+  //    timing-function: ease-out;
+  //  }
+  //  55% {
+  //    transform: translateX(-5px);
+  //    timing-function: ease-in;
+  //  }
+  //  73% {
+  //    transform: translateX(4px);
+  //    timing-function: ease-out;
+  //  }
+  //  82% {
+  //    transform: translateX(-4px);
+  //    timing-function: ease-in;
+  //  }
+  //  91% {
+  //    transform: translateX(2px);
+  //    timing-function: ease-out;
+  //  }
+  //  96% {
+  //    transform: translateX(-2px);
+  //    timing-function: ease-in;
+  //  }
+  //  100% {
+  //    transform: translateX(0px);
+  //    timing-function: ease-in;
+  //  }
+  //}
+
 
   label {
     position: absolute;
-    top: 1rem;
+    top: 1.2rem;
     left: 0.8rem;
-    font-size: 1rem;
+    font-size: 1.3rem;
     border: 0;
     outline: none;
     transition-property: top, transform;
     transition-duration: 0.5s;
     transition-timing-function: ease-in-out;
-    color: grey;
+    color: darkgrey;
   }
 
   input {
     width: 80%;
     border: none;
-    font-size: 1rem;
-    background-color: #f4f4f4;
-    color: grey;
+    font-size: 1.2rem;
+    background-color: #333;
+    color: white;
     position: absolute;
-    top: 1.8rem;
+    top: 2.1rem;
     left: 1rem;
 
     &:focus {
@@ -34,21 +83,23 @@ fieldset {
     }
   }
 
-  input:valid + label {
+  input:not(:placeholder-shown) + label {
     top: 0.4rem;
-    transform: scale(0.8);
+    transform: scale(0.7);
     font-weight: bold;
   }
 
   input:focus + label {
     top: 0.4rem;
-    transform: scale(0.8);
+    transform: scale(0.7);
     font-weight: bold;
   }
 
   input:hover + label {
     top: 0.4rem;
-    transform: scale(0.8);
+    transform: scale(0.7);
     font-weight: bold;
   }
+
 }
+
