--- a/frontend/src/components/Input/Input.module.scss
+++ b/frontend/src/components/Input/Input.module.scss
@@ -2,58 +2,8 @@ fieldset {
   position: relative;
   height: 4.3rem;
   border-radius: 0.5rem;
-  margin-bottom: 1rem;
+  margin-bottom: 1.3rem;
   background-color: #333;
-
-  //a {
-  //  background-color: red;
-  //  position: absolute;
-  //  width: 5rem;
-  //  height: 2rem;
-  //}
-
-  //input:invalid {
-  //  border-bottom: 1rem red solid;
-  //  animation: bounce;
-  //  animation-duration: .5s;
-  //  animation-delay: 0.25s;
-  //}
-  //
-  //@keyframes bounce {
-  //  0% {
-  //    transform: translateX(0px);
-  //    timing-function: ease-in;
-  //  }
-  //  37% {
-  //    transform: translateX(5px);
-  //    timing-function: ease-out;
-  //  }
-  //  55% {
-  //    transform: translateX(-5px);
-  //    timing-function: ease-in;
-  //  }
-  //  73% {
-  //    transform: translateX(4px);
-  //    timing-function: ease-out;
-  //  }
-  //  82% {
-  //    transform: translateX(-4px);
-  //    timing-function: ease-in;
-  //  }
-  //  91% {
-  //    transform: translateX(2px);
-  //    timing-function: ease-out;
-  //  }
-  //  96% {
-  //    transform: translateX(-2px);
-  //    timing-function: ease-in;
-  //  }
-  //  100% {
-  //    transform: translateX(0px);
-  //    timing-function: ease-in;
-  //  }
-  //}
-
 
   label {
     position: absolute;
@@ -66,6 +16,13 @@ fieldset {
     transition-duration: 0.5s;
     transition-timing-function: ease-in-out;
     color: darkgrey;
+  }
+
+  p {
+    position: absolute;
+    top: 3.8rem;
+    color: red;
+    font-size: 0.8rem;
   }
 
   input {
