--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -39,6 +39,13 @@ code {
   box-sizing: border-box;
 }
 
+@media (min-width: 280px) {
+  html {
+    font-size: 10.5px;
+  }
+
+}
+
 @media (min-width: 320px) {
   html {
     font-size: 11px;
@@ -47,7 +54,7 @@ code {
 
 @media (min-width: 380px) {
   html {
-    font-size: 15px;
+    font-size: 11.2px;
   }
 }
 
@@ -84,5 +91,17 @@ code {
 @media (min-width: 3840px) {
   html {
     font-size: 35.4px;
+  }
+}
+
+.page {
+  background-color: var(--cr-body-bg);
+  max-width: 100vw;
+  min-height: 100vh;
+  padding-bottom: 5rem;
+  overflow-x: hidden;
+
+  :last-child {
+    margin-bottom: 0;
   }
 }
