--- a/frontend/src/components/Button/Button.scss
+++ b/frontend/src/components/Button/Button.scss
@@ -1,43 +1,170 @@
-@use "./src/styles/Mixin" as *;
+$color: white;
+$color-dark: black;
+$speed: "0.25s";
+$transition: all #{$speed} cubic-bezier(0.310, -0.105, 0.430, 1.400);
+$height: 5rem;
+$icon-height: 6rem;
 
-button {
-  cursor: pointer;
-  font-family: var(--font-family-def);
-}
+// TODO Requires allot more work to make styles clean
 
 .btn {
-  border: 4px solid transparent;
-  background-color: var(--cr-main);
-  color: white;
-  border-radius: var(--border-radius-def);
-  padding: 0.5rem 1.8rem;
-  font-size: 1.5rem;
-  font-weight: 600;
-  box-shadow: 0px 0px 7px 8px #ff00004d;
-  transition: box-shadow 0.3s ease;
+  display: block;
+  background-color: $color;
+  width: 15rem;
+  height: $height;
+  margin: auto;
+  color: #fff;
   position: relative;
+  cursor: pointer;
+  overflow: hidden;
+  border-radius: 5px;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, .3);
+  transition: $transition;
+
+  span,
+  .icon {
+    display: block;
+    height: 100%;
+    text-align: center;
+    position: absolute;
+    top: 0;
+    color: black;
+  }
+
+
+  span {
+    font-size: 2rem;
+    text-transform: uppercase;
+    left: 0;
+    transition: $transition;
+    line-height: $height;
+    font-weight: 500;
+
+  }
+
+  .icon {
+    right: 0;
+    transition: $transition;
+    line-height: 5.5rem;
+
+    .play {
+      font-size: 2.5rem;
+      vertical-align: middle;
+      transition: $transition, height 0.3ms ease-in-out;
+    }
+
+    .outlined {
+      display: block;
+    }
+
+    .fill {
+      display: none;
+    }
+  }
+
 }
 
-.btn:hover {
-  box-shadow: 0px 0px 7px 15px #ff00004d;
+
+.clean {
+  span {
+    width: 100%;
+  }
+
+  .icon {
+    width: 0;
+  }
 }
 
-.btn-outline {
-  border: 3px solid white;
+.stylish {
+  span {
+    width: 72%;
+
+    &:after {
+      content: '';
+      background-color: $color-dark;
+      width: 2px;
+      height: 70%;
+      position: absolute;
+      top: 15%;
+      right: -1px;
+    }
+  }
+
+  .icon {
+    width: 28%;
+  }
+}
+
+.full {
+  &:hover {
+    opacity: .9;
+
+    span {
+      left: -100%;
+      opacity: 0;
+    }
+
+    .icon {
+      width: 100%;
+
+      .play {
+        font-size: 3rem;
+        line-height: $icon-height;
+      }
+
+      .outlined {
+        display: none;
+      }
+
+      .fill {
+        display: block;
+        font-size: 3rem;
+        color: black;
+      }
+    }
+  }
+}
+
+.min {
   background-color: transparent;
-  color: white;
-  box-shadow: unset;
-  transition: color 0.3s ease, background-color 0.3s ease;
-}
+  border: 0.2rem solid white;
 
-.btn-outline:hover {
-  box-shadow: unset;
-  color: var(--cr-main);
-  background-color: white;
-}
+  span {
+    width: 100%;
+    color: white !important;
+  }
 
-.btn.small {
-  border-width: 2px;
-  padding: 0.25rem 1.5rem;
-  font-size: 1rem;
+  .icon {
+    width: 0;
+  }
+
+  &:hover {
+    background-color: white;
+
+    span {
+      width: 72%;
+      color: black !important;
+    }
+
+    .icon {
+      width: 28%;
+      rotate: -90deg;
+      color: black;
+
+      .play {
+        font-size: 3rem;
+        line-height: $icon-height;
+      }
+
+      .outlined {
+        display: none;
+      }
+
+      .fill {
+        display: block;
+        font-size: 3rem;
+        color: black;
+      }
+    }
+  }
 }
