--- a/frontend/src/components/Form/Form.scss
+++ b/frontend/src/components/Form/Form.scss
@@ -1,3 +1,5 @@
+@use "./src/styles/Mixin" as *;
+
 .Form {
   width: 27.5%;
   border-radius: 1rem;
@@ -5,8 +7,15 @@
   flex-direction: column;
   justify-content: center;
   z-index: 1;
-
   background: rgba(000, 000, 000, 0.75);
+
+  @include tablet {
+    width: 80%;
+  }
+
+  @include mobile {
+    width: 95%;
+  }
 
   &__links {
     display: flex;
