--- a/frontend/src/components/StudioBox/StudioBox.scss
+++ b/frontend/src/components/StudioBox/StudioBox.scss
@@ -4,8 +4,6 @@
   cursor: pointer;
   transition: all 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s;
   border: 3px solid rgba(249, 249, 249, 0.1);
-  width: 15.5rem;
-  height: 9rem;
 
   img {
     inset: 0px;
@@ -24,6 +22,7 @@
     width: 100%;
     height: 100%;
     position: absolute;
+    object-fit: cover;
     top: 0px;
     opacity: 0;
     z-index: 0;
@@ -33,7 +32,7 @@
     box-shadow: rgb(0 0 0 / 80%) 0px 40px 58px -16px,
     rgb(0 0 0 / 72%) 0px 30px 22px -10px;
 
-    transform: scale(1.05);
+    transform: scale(1.2);
     border-color: rgba(249, 249, 249, 0.8);
 
     video {
