--- a/frontend/src/pages/Account/Account.scss
+++ b/frontend/src/pages/Account/Account.scss
@@ -2,20 +2,20 @@
 
 
 .AccountPage {
-  height: 100vh;
+  min-height: 100vh;
   position: relative;
-  //background: url('https://images.unsplash.com/photo-1538370965046-79c0d6907d47?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80') no-repeat center center fixed;
-  //background: url("https://wallpaperaccess.com/full/3545885.jpg") no-repeat center center;
   background: url("https://wallpaperaccess.com/full/6366.jpg") no-repeat center center fixed;
   background-size: cover;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+
 
   &::before {
     content: '';
     position: absolute;
-    height: 100vh;
+    min-height: 100vh;
     width: 100vw;
     backdrop-filter: blur(0.8rem);
     -webkit-backdrop-filter: blur(2rem);
@@ -28,38 +28,17 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     @include overlay();
   }
 
-  //&::after {
-  //  content: "";
-  //  position: absolute;
-  //  top: 0;
-  //  bottom: 0;
-  //  //left: -100%;
-  //  width: 100vw;
-  //  height: 100vh;
-  //  background-image: linear-gradient(to right, #000, transparent);
-  //}
-
-  .Intro {
-    position: relative;
-    width: 20rem;
-    height: 30rem;
-    top: 5rem;
-    left: 7rem;
-
-
-    img {
-      position: absolute;
-
+  h1 {
+    z-index: 1;
+    font-size: 4rem;
+    color: white;
+    display: none;
+    @include mobile {
+      display: block;
     }
-
-    p {
-      position: absolute;
-      top: 12rem;
-    }
-
   }
 }
