--- a/frontend/src/pages/Home/Home.scss
+++ b/frontend/src/pages/Home/Home.scss
@@ -1,6 +1,24 @@
-.HomePage {
-  min-height: 100vh;
-  margin: 0;
-  padding: 0;
-  background-color: var(--cr-body-bg);
+.home-page {
+  padding: 0 0 4rem 0;
+
+  &__studios {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: center;
+    justify-items: center;
+    width: 100%;
+    height: fit-content;
+    margin: 4rem 0 4rem 0;
+
+    .studio-box {
+      margin: 0 1rem 0 1rem;
+      width: 17.5rem;
+      height: 9rem;
+    }
+  }
+
+  .slider {
+    margin: 3rem 0 3rem 0;
+  }
 }
