Commit before restructuring the whole application, hopefully for the last time

--- a/frontend/src/components/Hero/Hero.scss
+++ b/frontend/src/components/Hero/Hero.scss
@@ -52,9 +52,19 @@
       }
 
       .title {
-        font-size: 5rem;
-        font-weight: 700;
-        line-height: 1;
+        display: flex;
+        align-content: center;
+        justify-content: center;
+
+        h2 {
+          font-size: 5rem;
+          font-weight: 700;
+          line-height: 1;
+        }
+
+        img {
+          width: 400px;
+        }
       }
 
       .overview {
