--- a/frontend/src/components/ShowCard/ShowCard.scss
+++ b/frontend/src/components/ShowCard/ShowCard.scss
@@ -2,42 +2,36 @@
 
 .show-card {
   position: relative;
-  background-position: top;
-  background-repeat: no-repeat;
-  background-size: cover;
-  padding-top: 160%;
-  border-radius: var(--border-radius-def);
+  border-radius: 0.5rem;
   margin-bottom: 1rem;
-  width: 5rem;
+  width: 10rem;
+  height: 15rem;
 
-  .btn {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(0);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  margin-left: 5rem;
+  background-color: #0b0b0b;
+  transition: 0.5s ease-in-out;
+
+  img {
+    width: 100%;
+    height: 100%;
+    border-radius: 0.5rem;
+    object-fit: cover;
   }
 
-  &::before {
-    content: "";
+  video {
+    width: 100%;
     position: absolute;
+    object-fit: cover;
+    border-radius: 0.5rem 0.5rem 0 0;
     top: 0;
     left: 0;
-    bottom: 0;
-    right: 0;
-    background-color: black;
-    opacity: 0;
-    transition: opacity 0.3s ease;
-    border-radius: var(--border-radius-def);
   }
 
-  @media (hover: hover) and (pointer: fine) {
-    &:hover::before {
-      opacity: 0.8;
-    }
+  &:hover {
+    transform: scale(1.5);
 
-    &:hover .btn {
-      transform: translate(-50%, -50%) scale(1);
+    img {
+      display: none;
     }
   }
 }
