--- a/apps/aphrodite/src/app/components/navbar/navbar.scss
+++ b/apps/aphrodite/src/app/components/navbar/navbar.scss
@@ -22,7 +22,7 @@
     font-weight: 600;
     align-self: center;
     justify-self: flex-start;
-    margin-left: 2rem;
+    margin-left: 3rem;
     position: absolute;
 
     a {
@@ -122,6 +122,12 @@
     }
   }
 
+  .search {
+    position: absolute;
+    right: 0;
+    margin-right: 8rem;
+  }
+
   &__user {
     align-self: center;
     justify-self: flex-end;
@@ -132,7 +138,7 @@
     justify-content: center;
     border-radius: 50%;
     border: 0.2rem solid rgb(255, 255, 255, 0.5);
-    margin-right: 1.5rem;
+    margin-right: 3rem;
     position: absolute;
     right: 0;
 
