--- a/apps/aphrodite/src/app/pages/account/account.scss
+++ b/apps/aphrodite/src/app/pages/account/account.scss
@@ -34,6 +34,26 @@
   }
 
   &__message {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    padding: 0.8rem 0;
+    width: 90%;
+    margin: 0 auto 1.5rem auto;
+    border-radius: 1rem;
+
+    span {
+      font-size: 1.3rem;
+      color: white;
+    }
+
+  }
+
+  .info {
+    background-color: green;
+  }
+
+  .error {
     background-color: red;
   }
 
