--- a/apps/aphrodite/src/app/pages/home/home.scss
+++ b/apps/aphrodite/src/app/pages/home/home.scss
@@ -1,4 +1,7 @@
 .home-page {
   width: 100%;
   height: 100%;
+  background-color: var(--cr-body-bg);
+  padding-bottom: 0.1rem;
+  overflow-x: hidden !important;
 }
