--- a/apps/aphrodite/src/app/components/button/button.scss
+++ b/apps/aphrodite/src/app/components/button/button.scss
@@ -2,59 +2,59 @@ $color: white;
 $color-dark: black;
 $speed: "0.25s";
 $transition: all #{$speed} cubic-bezier(0.310, -0.105, 0.430, 1.400);
-$height: 5rem;
-$icon-height: 6rem;
 
 // TODO Requires allot more work to make styles clean
 
 .btn {
   display: block;
   background-color: $color;
-  width: 15rem;
-  height: $height;
   margin: auto;
   color: #fff;
   position: relative;
   cursor: pointer;
   overflow: hidden;
-  border-radius: 5px;
+  border-radius: 0.5em;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, .3);
   transition: $transition;
+  aspect-ratio: 3/1;
 
   span,
   .icon {
-    display: block;
-    height: 100%;
-    text-align: center;
     position: absolute;
-    top: 0;
+    top: 50%;
+    transform: translateY(-50%);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    text-align: center;
+    justify-items: center;
+
+    height: 100%;
     color: black;
   }
 
 
   span {
-    font-size: 2rem;
+    font-size: 2em;
     text-transform: uppercase;
     left: 0;
     transition: $transition;
-    line-height: $height;
     font-weight: 500;
-
   }
 
   .icon {
     right: 0;
     transition: $transition;
-    line-height: 5.5rem;
 
     .play {
-      font-size: 2.5rem;
-      vertical-align: middle;
+      font-size: 2.5em;
       transition: $transition, height 0.3ms ease-in-out;
     }
 
     .outlined {
-      display: block;
+      display: flex;
     }
 
     .fill {
@@ -65,6 +65,7 @@ $icon-height: 6rem;
 }
 
 
+////////////////////////////////////////////////////////////////////////////////////////////
 .clean {
   span {
     width: 100%;
@@ -95,6 +96,8 @@ $icon-height: 6rem;
   }
 }
 
+////////////////////////////////////////////////////////////////////////////////////////////
+
 .full {
   &:hover {
     opacity: .9;
@@ -108,8 +111,7 @@ $icon-height: 6rem;
       width: 100%;
 
       .play {
-        font-size: 3rem;
-        line-height: $icon-height;
+        font-size: 3em;
       }
 
       .outlined {
@@ -117,8 +119,8 @@ $icon-height: 6rem;
       }
 
       .fill {
-        display: block;
-        font-size: 3rem;
+        display: flex;
+        font-size: 3em;
         color: black;
       }
     }
@@ -127,7 +129,7 @@ $icon-height: 6rem;
 
 .min {
   background-color: transparent;
-  border: 0.2rem solid white;
+  border: 0.2em solid white;
 
   span {
     width: 100%;
@@ -136,6 +138,12 @@ $icon-height: 6rem;
 
   .icon {
     width: 0;
+
+    .play {
+      svg {
+        rotate: -90deg;
+      }
+    }
   }
 
   &:hover {
@@ -148,12 +156,10 @@ $icon-height: 6rem;
 
     .icon {
       width: 28%;
-      rotate: -90deg;
       color: black;
 
       .play {
-        font-size: 3rem;
-        line-height: $icon-height;
+        font-size: 3em;
       }
 
       .outlined {
@@ -161,9 +167,7 @@ $icon-height: 6rem;
       }
 
       .fill {
-        display: block;
-        font-size: 3rem;
-        color: black;
+        display: flex;
       }
     }
   }
