--- a/apps/aphrodite/src/app/components/studio-box/studio-box.scss
+++ b/apps/aphrodite/src/app/components/studio-box/studio-box.scss
@@ -1,10 +1,10 @@
 .studio-box {
   position: relative;
-  box-shadow: rgb(0 0 0 / 69%) 0px 26px 30px -10px, rgb(0 0 0 / 73%) 0px 16px 10px -10px;
+  box-shadow: var(--def-box-sh);
   cursor: pointer;
-  transition: all 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s;
-  border: 3px solid rgba(249, 249, 249, 0.1);
+  border: var(--def-border);
   height: fit-content !important;
+  transition: all 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s;
 
   img {
     width: 100%;
@@ -31,11 +31,10 @@
   }
 
   &:hover {
-    box-shadow: rgb(0 0 0 / 80%) 0px 40px 58px -16px,
-    rgb(0 0 0 / 72%) 0px 30px 22px -10px;
+    box-shadow: var(--ani-def-box-sh);
 
     transform: scale(1.2);
-    border-color: rgba(249, 249, 249, 0.8);
+    border: var(--ani-def-border);
 
     video {
       opacity: 1;
